--- a/app/src/main/res/layout/activity_sphere.xml
+++ b/app/src/main/res/layout/activity_sphere.xml
@@ -9,7 +9,7 @@
     tools:context=".Sphere">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textView_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="84dp"
@@ -23,7 +23,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/text_sphere"
+        android:id="@+id/sphere_radius"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="245dp"
@@ -38,22 +38,23 @@
         android:id="@+id/result_sphere"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="229dp"
+        android:layout_marginTop="53dp"
+        android:text="Volume:"
         android:textColor="@color/white"
         android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_sphere" />
 
     <Button
-        android:id="@+id/btn"
+        android:id="@+id/btn_sphere"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="51dp"
         android:text="Calculate Volume"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_sphere" />
+        app:layout_constraintTop_toBottomOf="@+id/sphere_radius" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
